--- a/Developer/flat-ui/bootstrap/css/bootstrap.css
+++ b/Developer/flat-ui/bootstrap/css/bootstrap.css
@@ -2681,8 +2681,8 @@ input[type="button"].btn-block {
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  src: url('/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/bootstrap/fonts/glyphicons-halflings-regular.eot');
+  src: url('/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
 .glyphicon {
@@ -4512,7 +4512,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-right: 15px;
   margin-bottom: 8px;
   background-color: transparent;
-  background-image: url("../../../common-files/icons/menu-icon.png") 50% no-repeat;
+  background-image: url("/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/icons/menu-icon.png") 50% no-repeat;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
