--- a/Developer/samples/sample-04/css/style.css
+++ b/Developer/samples/sample-04/css/style.css
@@ -591,7 +591,7 @@ button:active {
   padding: 0;
   width: 30px;
   height: 30px;
-  background: url("file:///Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/icons/menu-icon.png") 50% no-repeat;
+  background: url("Developer/common-files/icons/menu-icon.png") 50% no-repeat;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -1716,7 +1716,7 @@ content-8.signup-form form .close:focus {
   }
 }
 .header-10-sub .background {
-  background-image: url("/Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/img/cloud-accounting-software-1080x675.jpg");
+  background-image: url("Developer/samples/sample-04/img/cloud-accounting-software-1080x675.jpg");
   opacity: 10;
   filter: alpha(opacity=9000);
   opacity: 0.90;
@@ -1760,7 +1760,7 @@ content-8.signup-form form .close:focus {
   filter: alpha(opacity=10);
 }
 .content-23.custom-bg {
-  background-image: url("/Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/img/Italy_001.png");
+  background-image: url("Developer/samples/sample-04/img/Italy_001.png");
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-attachment: fixed;
