--- a/Developer/samples/sample-04/css/style.css
+++ b/Developer/samples/sample-04/css/style.css
@@ -1761,9 +1761,10 @@ content-8.signup-form form .close:focus {
 }
 .content-23.custom-bg {
   background-image: url("file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/img/3082335-analytics_cellphone_charts_data_device_document_electronics_iphone_marketing_mobile-phone_paper_phone_screen_shadow_smartphone_statistics_stats_technology_touch.jpg");
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  opacity: 10;
+  filter: alpha(opacity=9000);
+  opacity: 0.90;
+  filter: alpha(opacity=100);
 }
 .footer-3 {
   background-color: #1B1F23;
