--- a/Developer/samples/sample-04/css/style.css
+++ b/Developer/samples/sample-04/css/style.css
@@ -1761,7 +1761,7 @@ content-8.signup-form form .close:focus {
 }
 
 .content-23.custom-bg {
-  background-image: url("file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/img/img-1.jpg");
+  background-image: url("");
   opacity: 10;
   filter: alpha(opacity=1000);
   opacity: 2;
