--- a/Developer/samples/sample-04/css/style.css
+++ b/Developer/samples/sample-04/css/style.css
@@ -1716,7 +1716,7 @@ content-8.signup-form form .close:focus {
   }
 }
 .header-10-sub .background {
-  background-image: url("file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/img/cloud-accounting-software-1080x675.jpg");
+  background-image: url(file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/img/cloud-accounting-software-1080x675.jpg);
   opacity: 10;
   filter: alpha(opacity=9000);
   opacity: 0.90;
@@ -1761,7 +1761,11 @@ content-8.signup-form form .close:focus {
 }
 
 .content-23.custom-bg {
-  background-image: url("file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/img/img-1.jpg")
+  background-image: url("");
+  opacity: 10;
+  filter: alpha(opacity=1000);
+  opacity: 2;
+  filter: alpha(opacity=100);
 }
 
 .footer-3 {
