--- a/Developer/samples/sample-04/css/style.css
+++ b/Developer/samples/sample-04/css/style.css
@@ -1716,7 +1716,7 @@ content-8.signup-form form .close:focus {
   }
 }
 .header-10-sub .background {
-  background-image: url("https://lh3.googleusercontent.com/ZXgBEVB1BBli4B13yflAskkXBT1hoqUD1LGrMCDUzW1u4jVqFmVinfkhtSJGoniLi-GvkS9Uks7jk6WRKRVWgNhuaLzzW6VHOB_s8etkFRshiCFZwWqE-SPaGwoLXn3tc2SjZf3Gm5N_ECIIVpPbIZue1TelT2qlGW7wEjjMT4es9foZLJSr3-BuJU8OTefiXeKCupPvR9du5nudqjL7ybfBsnmI6WLm_Gwt179nyCEiQuDBezcgfbs0QSV0iNh_cE1ezDGshFGFDzJfzrRWFOzAw8pfEpKamMxSHuD-1VY4l7OHJimyQJOYiUSng1skpkYXQhKSc65_0AVGu6256OlzDsvZWlNExymt2JpwDd1IuAQIm0vtoliVn_R6aRMIUju7lz3O1Tx-aqZ67Uw6-Gy3J7qukRgcO6PdiOPgNcE_650ZGFkNv-Dpa4G4D_40HGxqgV2XqzPjQ6ZlVy-hrRlkD7InRSs81sWgAqUcYoiBWCKdgAUHacT9A_aY8dVVy9q07a2dH2omsHU3ejZeiRHft9Od4rFqFbKDxif4z9bp8m74hzcyYAMzpRJy5xmYCreQhpuO_HJ2G9uZd9TOEzj_Gi7yjPOWJV7Mdx4_KCCn_ys1yTT7hqWRVoaIPQ=w944-h590-no");
+  background-image: url(https://lh3.googleusercontent.com/ZXgBEVB1BBli4B13yflAskkXBT1hoqUD1LGrMCDUzW1u4jVqFmVinfkhtSJGoniLi-GvkS9Uks7jk6WRKRVWgNhuaLzzW6VHOB_s8etkFRshiCFZwWqE-SPaGwoLXn3tc2SjZf3Gm5N_ECIIVpPbIZue1TelT2qlGW7wEjjMT4es9foZLJSr3-BuJU8OTefiXeKCupPvR9du5nudqjL7ybfBsnmI6WLm_Gwt179nyCEiQuDBezcgfbs0QSV0iNh_cE1ezDGshFGFDzJfzrRWFOzAw8pfEpKamMxSHuD-1VY4l7OHJimyQJOYiUSng1skpkYXQhKSc65_0AVGu6256OlzDsvZWlNExymt2JpwDd1IuAQIm0vtoliVn_R6aRMIUju7lz3O1Tx-aqZ67Uw6-Gy3J7qukRgcO6PdiOPgNcE_650ZGFkNv-Dpa4G4D_40HGxqgV2XqzPjQ6ZlVy-hrRlkD7InRSs81sWgAqUcYoiBWCKdgAUHacT9A_aY8dVVy9q07a2dH2omsHU3ejZeiRHft9Od4rFqFbKDxif4z9bp8m74hzcyYAMzpRJy5xmYCreQhpuO_HJ2G9uZd9TOEzj_Gi7yjPOWJV7Mdx4_KCCn_ys1yTT7hqWRVoaIPQ=w944-h590-no);
   opacity: 10;
   filter: alpha(opacity=9000);
   opacity: 0.90;
