--- a/Developer/samples/sample-04/css/style.css
+++ b/Developer/samples/sample-04/css/style.css
@@ -1298,13 +1298,31 @@ section * {
   font-weight: normal;
   color: #34495e;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 70px 0 35px;
+  margin: 20px 0 20px;
 }
+
 .content-8 p {
   font-size: 18px;
   font-weight: normal;
   color: #7f8c8d;
-  margin-bottom: 43px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 45px;
+}
+
+
+.content-8 h3-f {
+  text-align: center;
+  font-size: 25px;
+  font-weight: normal;
+  color: #34495e;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 30px 20 30px;
+}
+.content-8 p-f {
+  font-size: 18px;
+  font-weight: normal;
+  color: #7f8c8d;
+  margin-bottom: 0px;
 }
 
 .content-8 .btn.btn-clear {
@@ -1340,7 +1358,7 @@ section * {
 /* Full-width input fields */
 input[type=text], input[type=password] {
     width: 100%;
-    padding: 15px;
+    padding: 20px;
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
@@ -1377,32 +1395,30 @@ button:hover {
 
 /* Add padding to container elements */
 .content-8  .container {
-    padding: 16px;
+    padding: 20px;
     width: 100%;
+    height: 100%;
 }
 
 /* The Modal (background) */
 .content-8 .modal {
+    text-align:center;
     display: none; /* Hidden by default */
     position: relative; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 50%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: #474e5d;
+    background-color: #B4B6BD;
     padding-top: 20px;
 }
 
 /* Modal Content/Box */
 .content-8 .modal-content {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
+    max-height: 170vh;
+    padding: 40px 0;
     background-color: #fefefe;
-    border: 1px solid #888;
+    border: 2px solid #888;
 }
 
 /* Style the horizontal ruler */
@@ -1413,7 +1429,9 @@ hr {
  
 /* The Close Button (x) */
 .close {
-    position: absolute;
+    display: inline-block;
+    margin: -113px 0;
+    padding: 113px 0;
     right: 35px;
     top: 15px;
     font-size: 40px;
@@ -1434,6 +1452,11 @@ hr {
     display: table;
 }
 
+mc_embed_signup {
+  background:#fff; 
+  clear:left; 
+  font:14px Helvetica,Arial,sans-serif;
+}
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
     .cancelbtn, .signupbtn {
