--- a/css/style.css
+++ b/css/style.css
@@ -1809,10 +1809,13 @@ mc_embed_signup {
 }
 .header-10-sub .background {
   background-image: url("https://photo-cdn.icons8.com/assets/previews/994/e751598b-a61b-4d8f-b0cd-8b3aed6360a71x.jpg");
-  height: 100%;
-  opacity: 0.90;
-  filter: alpha(opacity=100);
+  background-size:     cover;
+  height: 120vh;
+  opacity: 10;
+  filter: alpha(opacity=1000);
+
 }
+
 .header-10 {
   background-color: #1b1f23;
 }
@@ -1853,6 +1856,7 @@ mc_embed_signup {
 
 .content-23.custom-bg {
   background-image: url("https://photo-cdn.icons8.com/assets/previews/343/6b41fbee-16ed-49e2-8fd8-2edf35e51dbf1x.jpg");
+  background-size:     cover;
   height: 120vh;
   opacity: 10;
   filter: alpha(opacity=1000);
@@ -1860,6 +1864,7 @@ mc_embed_signup {
 
 .content-23.custom-bg-2 {
   background-image: url("https://photo-cdn.icons8.com/assets/previews/290/0261e648-b608-4c84-ad8c-0f49dedfd5dd1x.jpg");
+  background-size:     cover;
   height: 120vh;
   opacity: 10;
   filter: alpha(opacity=1000);
