--- a/css/style.css
+++ b/css/style.css
@@ -2016,41 +2016,41 @@ text-align:center}
 {padding-top:2rem}
 
 /*  COLUMN SETUP  */
-.posts .entry-content.col {
+.col {
   display: block;
   float:left;
   margin: 1% 0 1% 1.2%;
 }
-.posts .entry-content.col:first-child { margin-left: 0; }
+.col:first-child { margin-left: 0; }
 
-.posts .entry-content.span_6_of_6 {
+.span_6_of_6 {
   width: 100%;
 }
 
-.posts .entry-content.span_5_of_6 {
+.span_5_of_6 {
     width: 83.06%;
 }
 
-.posts .entry-content.span_4_of_6 {
+.span_4_of_6 {
     width: 66.13%;
 }
 
-.posts .entry-content.span_3_of_6 {
+.span_3_of_6 {
     width: 49.2%;
 }
 
-.posts .entry-content.span_2_of_6 {
+.span_2_of_6 {
     width: 32.26%;
 }
 
-.posts .entry-content.span_1_of_6 {
+.span_1_of_6 {
     width: 15.33%;
 }
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
-  .posts .entry-content.col {  margin: 1% 0 1% 0%; }
-  .posts .entry-content.span_1_of_6, .posts .entry-content.span_2_of_6, .posts .entry-content.span_3_of_6, .posts .entry-content.span_4_of_6, .posts .entry-content.span_5_of_6, .span_6_of_6 { width: 100%; }
+  .col {  margin: 1% 0 1% 0%; }
+  .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
 }
 
 .link-more
