--- a/css/style.css
+++ b/css/style.css
@@ -2086,7 +2086,32 @@ text-align:center}
 @media only screen and (max-width: 480px) {
   .col {  margin: 1% 0 1% 0%; }
   .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+  .span_8_of_8 {
+    width: 100%; 
+  }
+  .span_7_of_8 {
+    width: 100%; 
+  }
+  .span_6_of_8 {
+    width: 100%; 
+  }
+  .span_5_of_8 {
+    width: 100%; 
+  }
+  .span_4_of_8 {
+    width: 100%; 
+  }
+  .span_3_of_8 {
+    width: 100%; 
+  }
+  .span_2_of_8 {
+    width: 100%; 
+  }
+  .span_1_of_8 {
+    width: 100%; 
+  }
 }
+
 
 .link-more
 {font-weight:400;
