--- a/css/style.css
+++ b/css/style.css
@@ -2025,7 +2025,10 @@ text-align:center}
   float:left;
   margin: 1% 0 1% 1.2%;
 }
-.col:first-child { margin-left: 0; }
+.col:first-child { 
+  display: block;
+  float:left;
+  margin: 1% 0 1% 1.6%;}
 
 .span_6_of_6 {
   width: 100%;
@@ -2051,9 +2054,6 @@ text-align:center}
     width: 15.33%;
 }
 
-.span_8_of_8 {
-  width: 100%;
-}
 
 .span_7_of_8 {
   width: 87.3%; 
