--- a/css/style.css
+++ b/css/style.css
@@ -1886,15 +1886,51 @@ overflow:hidden;
 position:relative;
 width:33.3333%}
 
+paper-card {
+    display: block;
+    max-width: 1100px;
+    margin: 0 auto;
+    z-index: 0;
+}
+
+
+:host {
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+    background-color: var(--paper-card-background-color,var(--primary-background-color));
+    border-radius: 2px;
+    font-family: var(--paper-font-common-base_-_font-family);
+    -webkit-font-smoothing: var(--paper-font-common-base_-_-webkit-font-smoothing);
+}
+
+:host, html {
+    --paper-material_-_display: block;
+    --paper-material_-_position: relative;
+    --paper-material-elevation-1_-_box-shadow: var(--shadow-elevation-2dp_-_box-shadow);
+    --paper-material-elevation-2_-_box-shadow: var(--shadow-elevation-4dp_-_box-shadow);
+    --paper-material-elevation-3_-_box-shadow: var(--shadow-elevation-6dp_-_box-shadow);
+    --paper-material-elevation-4_-_box-shadow: var(--shadow-elevation-8dp_-_box-shadow);
+    --paper-material-elevation-5_-_box-shadow: var(--shadow-elevation-16dp_-_box-shadow);
+}
+
+:host([elevation="2"]) {
+    box-shadow: var(--paper-material-elevation-2_-_box-shadow);
+}
+
+:host ::slotted(.card-content) {
+    padding: 16px;
+    position: relative;
+}
 
 .posts .edit-link
 {position:absolute;
 text-align:center;
 top:5%;
-left:10%;
+left:5%;
 bottom:0;
 right:5%;
-width:90%;
+width:80%;
 z-index:5}
 
 .posts .has-post-thumbnail .edit-link
