--- a/css/style.css
+++ b/css/style.css
@@ -1894,6 +1894,10 @@ paper-card {
     z-index: 0;
 }
 
+.fb-comments {
+padding-left:8px
+padding-right:8px;}
+
 
 :host {
     display: inline-block;
