--- a/css/style.css
+++ b/css/style.css
@@ -2141,7 +2141,9 @@ text-align:center}
 }
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
-  .col {  margin: 1% 0 1% 0%; }
+  .col {  
+    margin: 0% 0 0% 0%; 
+    padding:5%; }
   .span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
   .span_8_of_8 {
     width: 100%; 
